--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-  <name>asl_turtlebot_team5</name>
+  <name>turtlebot_team5</name>
   <version>0.0.0</version>
   <description>The asl_turtlebot package</description>
 
