Add ObjectLocation msg

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,7 @@ add_message_files(
  FILES
  DetectedObject.msg
  DetectedObjectList.msg
+ ObjectLocation.msg
 )
 
 ## Generate services in the 'srv' folder
