update locator and ekf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,7 @@ add_message_files(
  DetectedObject.msg
  DetectedObjectList.msg
  ObjectLocation.msg
+ ObjectLocationList.msg
 )
 
 ## Generate services in the 'srv' folder
